--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                         <li><a href="#section-history"><span class="menu-item-span">HISTORY</span></a>
                         </li>
                         <li><a href="#section-team"><span class="menu-item-span">TEAM</span></a>
-                        </li>
-                        <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
-                        </li>
+                        </li>                        
                         <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
                         </li>
@@ -716,6 +714,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/kimu.png" alt="KIMU" style="height:20px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.kimustudio.com/" target=new>(주)키뮤스튜디오</a></p>
                             </div>
@@ -724,7 +723,8 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
-                            <div class="icon-box-title">
+                            <div class="icon-box-icon"><img src="assets/images/partners/gcon.png" alt="GCON" style="height:20px;"></a></div>
+                            <div class="icon-box-title">                                
                                 <p><a href="https://gcon.or.kr/" target=new>경기콘텐츠진흥원</a></p>
                             </div>
                         </div>
@@ -732,6 +732,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/robolife.png" alt="ROBOLIFE" style="height:13px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="http://www.robolife.co.kr/" target=new>(주)로보라이프</a></p>
                             </div>
@@ -740,6 +741,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/abrain.webp" alt="ABRAIN" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.abrain.co.kr/" target=new>(주)에이브레인</a></p>
                             </div>
@@ -748,6 +750,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/siis.png" alt="SIIS" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.si-imaging.com" target=new>(주)SIIS</a></p>
                             </div>
@@ -755,6 +758,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/blatform.png" alt="BLATFORM" style="height:11px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.bunyangi.com/" target=new>(주)블랫폼</a></p>
                             </div>
@@ -762,6 +766,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/kidp.png" alt="KIDP" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.kidp.or.kr" target=new>한국디자인진흥원</a></p>
                             </div>
@@ -769,6 +774,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/airon.png" alt="AIRON" style="height:10px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://blog.naver.com/habarose" target=new>AIR ON</a></p>
                             </div>
@@ -776,20 +782,16 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/dorosee.webp" alt="DOROSEE" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="http://dorosee.kr/" target=new>(주)도로시</a></p>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
-                            <div class="icon-box-title">
-                                <p><a href="https://dronemakers.modoo.at/" target=new>드론메이커스협동조합</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/kvic.png" alt="KVIC" style="height:12px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://k-vic.co.kr/" target=new>한국벤처투자(주)</a></p>
                             </div>
@@ -798,6 +800,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/mysc.png" alt="MYSC" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://mysc.co.kr/" target=new>엠와이소셜컴퍼니(MYSC)</a></p>
                             </div>
@@ -806,6 +809,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/jdc.png" alt="JDC" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.jdcenter.com/" target=new>제주국제자유도시개발센터(JDC)</a></p>
                             </div>
@@ -814,6 +818,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/narae.png" alt="NARAE" style="height:17px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.makersnr.com/" target=new>한국메이커스협동조합 나래</a></p>
                             </div>
@@ -822,6 +827,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/kiat.png" alt="KIAT" style="height:12px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.kiat.or.kr/" target=new>한국산업기술진흥원</a></p>
                             </div>
@@ -830,6 +836,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/smalldays.png" alt="SMALLDAYS" style="height:9px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
                             </div>
@@ -838,6 +845,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/jejucenter.png" alt="JEJU CENTER" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://ccei.creativekorea.or.kr/jeju" target=new>제주 창조경제혁신센터</a></p>
                             </div>
@@ -846,6 +854,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/startupbay.png" alt="JEJU STARTUP BAY" style="height:18px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.facebook.com/StartupbayJeju" target=new>제주 스타트업베이</a></p>
                             </div>
@@ -854,6 +863,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/cku.png" alt="CKU" style="height:18px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="http://www.cku.ac.kr" target=new>가톨릭관동대학교</a></p>
                             </div>
@@ -862,6 +872,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/gov.png" alt="KIPO" style="height:18px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.kipo.go.kr" target=new>특허청</a></p>
                             </div>
@@ -871,31 +882,25 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/kcs.png" alt="김청산 법무사" style="height:11px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://blog.naver.com/bluemtk">법무사 김청산 사무소</a></p>
                             </div>
                         </div>
                     </div>
 
-
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/companya.png" alt="Company A" style="height:15px;"></a></div>
                             <div class="icon-box-title">
-                                <p><a href="http://cpworks.co.kr" target=new>(주)체리픽웍스</a></p>
+                                <p><a href="http://companya.kr/" target=new>엑셀러레이터 컴퍼니에이</a></p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
-                            <div class="icon-box-title">
-                                <p><a href="https://companya.modoo.at" target=new>엑셀러레이터 컴퍼니에이</a></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/gsu.png" alt="GSU" style="height:18px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.gw.ac.kr/gsu" target=new>강원도립대학교</a></p>
                             </div>
@@ -904,6 +909,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/kibo.png" alt="KIBO" style="height:13px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
                             </div>
@@ -912,6 +918,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/gov.png" alt="MSS" style="height:18px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
                             </div>
@@ -920,6 +927,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/tipip.png" alt="TIPIP" style="height:13px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="https://tipip.kr" target=new>티아이피 특허법률 사무소</a></p>
                             </div>
@@ -928,6 +936,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/appso.png" alt="APPSO" style="height:18px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
                             </div>
@@ -936,14 +945,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
-                            <div class="icon-box-title">
-                                <p><a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/partners/hongsee.png" alt="HONGSEE" style="height:15px;"></a></div>
                             <div class="icon-box-title">
                                 <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
                             </div>
@@ -978,27 +980,6 @@
             </div>
         </section>
         <!-- Features end-->
-
-
-        <!-- Counters-->
-        <section class="module" id="section-location">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h4>Location<span class="blinking-cursor">_</span></h4>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d197.16406501490306!2d126.76789609132942!3d37.75193997258904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c8de5a3605b8f%3A0x2e35168624ee623a!2z67O0656M7ZSE65287J6Q!5e0!3m2!1sko!2skr!4v1672539521417!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0" loading="lazy"></iframe>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="space" data-MY="60px"></div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-        <!-- Counters end-->
 
         <!-- Footer-->
         <footer class="footer">
