--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords"
-        content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
-    <meta name="description" content="즐겁게 일하기 위한 진보된 플랫폼">
+        content="fintech, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
+    <meta name="description" content="즐겁게 일하는 진보된 플랫폼">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="즐겁게 일하기 위한 진보된 플랫폼">
+    <meta name="twitter:description" content="즐겁게 일하는 진보된 플랫폼">
     <meta name="twitter:title" content="APLY Inc. | Advanced platform to fly">
-    <meta name="twitter:image" content="https://home.aply.biz/assets/images/site_title.png">
+    <meta name="twitter:image" content="assets/images/site_title.png">
 
     <meta property="analytics-track" content="APLY Inc." />
     <meta property="analytics-s-channel" content="APLY" />
@@ -33,16 +33,16 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:title" content="어플라이 | APLY Inc. - Advanced platform to fly" />
-    <meta property="og:image" content="https://home.aply.biz/assets/images/site_title.png" />
+    <meta property="og:image" content="assets/images/site_title.png" />
     <meta property="og:url" content="https://home.aply.biz" />
-    <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼" />
+    <meta property="og:description" content="즐겁게 일하는 진보된 플랫폼" />
 
     <meta itemprop="name" content="APLY">
-    <meta itemprop="image" content="https://home.aply.biz/assets/images/site_title.png">
+    <meta itemprop="image" content="assets/images/site_title.png">
     <meta itemprop="description"
-        content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!">
+        content="즐겁게 일하는 진보된 플랫폼을 만나보세요!">
     <meta itemprop="keywords"
-        content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="fintech, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
     <meta itemprop="url" content="https://home.aply.biz/">
 
     <!-- Favicons-->
@@ -127,9 +127,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <span class="anitext">
+                        <h4 class="anitext"><b>
                             ADVANCED PLATFORM TO FLY
-                        </span>                        
+                        </b></h4>                        
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
 
                     <div class="col-lg-6 col-md-6">
                         <div class="icon-box icon-box-left">
-                            <div class="icon-box-icon"><img src="assets/images/widgets/9.png" border=0></div>
+                            <div class="icon-box-icon"><img src="assets/images/widgets/9.png" width="30px" border=0></div>
                             <div class="feature-content">
                                 <h6>AQR (Advanced QR)</h6>
                                 <p>앱설치와 수수료가 없는 간편 송금 지원 서비스</p>
@@ -962,7 +962,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
                         <h5><b>THE PATH TO THE NEXT<span class="blinking-cursor">_</span></b></h5>
-                        <h5><b><i>APLY</i>가 준비하고 있습니다.</b></h5>
+                        <h5 class="anitext"><b><i>APLY</i>가 준비하고 있습니다.</b></h5>
                     </div>
                 </div>
             </div>
@@ -978,10 +978,8 @@
                             <!-- Text widget-->
                             <aside class="widget widget-text">
                                 <div class="widget-title">
-                                    <a href="#">
-                                        <font color=white>
-                                            <p><B>APLY Inc.</B></p>
-                                        </font>
+                                    <a href="#">                                        
+                                            <B>APLY Inc.</B>
                                     </a>
                                 </div>
                                 <div class="textwidget">
