--- a/service.html
+++ b/service.html
@@ -121,6 +121,20 @@
            </div>
          </div>
          <div class="row align-items-center justify-content-center flex-row-reverse">
+          <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
+           <div class="presentation-circle">
+             <figure style="background-image: url('assets/img/service_2_1.jpg')"></figure>
+           </div>
+          </div>
+          <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
+            <h5 class="font-weight-bold">AQR-M<span class="font-weight-light text-black-50 pl-2">에이큐알M</span></h5>
+            <p class="pb-4" style="word-break:keep-all;">QR 기반 Mass Production 관리 솔루션</p>
+            <a href="//aqr-m.aplx.link" target="_blank">
+              <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
+            </a>
+          </div>           
+        </div>
+         <div class="row align-items-center justify-content-center">
            <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
             <div class="presentation-circle">
               <figure style="background-image: url('assets/img/service_2.jpg')"></figure>
@@ -134,7 +148,7 @@
              </a>
            </div>           
          </div>
-         <div class="row align-items-center justify-content-center">
+         <div class="row align-items-center justify-content-center flex-row-reverse">
            <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
              <div class="presentation-circle">
                <figure style="background-image: url('assets/img/service_3.jpg')"></figure>
