--- a/service.html
+++ b/service.html
@@ -128,7 +128,7 @@
           </div>
           <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
             <h5 class="font-weight-bold">AQR-M<span class="font-weight-light text-black-50 pl-2">에이큐알M</span></h5>
-            <p class="pb-4" style="word-break:keep-all;">QR 기반 Mass Production 관리 솔루션<br />대량의 인프라/설비를 스마트하게 관리하기 위한 진보한 솔루션</p>
+            <p class="pb-4" style="word-break:keep-all;">QR 기반 Mass Production 관리 솔루션<br />대량의 인프라/설비를 스마트하게 관리하기 위한 진보된 솔루션</p>
             <a href="//aqr-m.aplx.link" target="_blank">
               <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
             </a>
