--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                  <ul class="mt-4 masonry gallery row gutter-1">
                    <li class="col-12" data-aos="zoom-in">
                      <figure class="photo equal equal-double">
-                       <a href="#" style="background-image: url(assets/img/contact_1.jpg);">
+                       <a href="assets/img/contact_1.jpg" style="background-image: url(assets/img/contact_1.jpg);">
                          <span class="photo-caption">
                            <span>APLY - The path to the next</span>
                          </span>
@@ -41,8 +41,8 @@
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left">
                  <i class="icon-question fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                  <h5 class="font-weight-normal">상담 및 문의</h5>
-                 <p class="mb-4" style="word-break:keep-all;">신속하게 검토하여 답신드리겠습니다.</p>
-                 <p style="word-break:keep-all;">분야 선택 후 내용을 작성해주세요.</p>
+                 <p class="mb-4">신속하게 검토하여 답신드리겠습니다.</p>
+                 <p>분야 선택 후 내용을 작성해주세요.</p>
                  
                  <!-- 문의하기 폼 -->
                  <form role="form" method="post" id="email_up"> 
@@ -113,7 +113,7 @@
                      </div>
                    </div>
                    <div class="row justify-content-center mb-6">
-                     <div class="col-12 fs-14 text-center" style="word-break:keep-all;">                  
+                     <div class="col-12 fs-14 text-center">                  
                        이 사이트는 reCAPTCHA의 보호를 받으며 Google 
                        <a href='https://policies.google.com/privacy' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 
                        <a href='https://policies.google.com/terms' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.</a>
