--- a/service.html
+++ b/service.html
@@ -157,7 +157,7 @@
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">System Integration</h5>
              <p class="pb-4">고급 역량을 통해 최고 수준의 SW를 확보하세요.<br />영상처리, 증강현실, Big Data, 드론, AI 등 다양한 분야의 전문 기술을 보유한 연구개발팀이 함께 합니다.</p>
-             <a href="/?p=team">
+             <a href="//si.aply.biz" target="_blank">
                <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
              </a>
            </div>
