--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               <li class="nav-item" id="menu_service"><a href="#service" class="nav-link">서비스</a></li>
               <li class="nav-item" id="menu_team"><a href="#team" class="nav-link">팀</a></li>
               <li class="nav-item" id="menu_contact"><a href="#contact" class="nav-link">문의</a></li>
+              <li class="nav-item" id="menu_board"><a href="#board" class="nav-link">공지</a></li>
             </ul>
           </div>
         </nav>
