--- a/board.html
+++ b/board.html
@@ -42,8 +42,8 @@
                   <div class="row">
                     <div class="col-12">
                       <i class="icon-exclamation fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
-                      <h5 class="font-weight-normal">2024.10.16 ~ 2025.10.15까지 두근두근 서비스의 제공이 중단됩니다.</h5>
-                      <p class="mb-4" style="word-break:keep-all;">더 좋은 모습으로 서비스가 거듭나도록 노력하겠습니다.</p>
+                      <h5 class="font-weight-normal">2024년 10월 20일, 두근두근 서비스의 제공이 중단됩니다.</h5>
+                      <p class="mb-4" style="word-break:keep-all;">그동안 이용해 주셔서 감사합니다.</p>
                     </div>
                   </div>                  
                   <div class="row">
