--- a/contact.html
+++ b/contact.html
@@ -101,14 +101,16 @@
                 </div>
 
                 <div class="col-12 text-left small mt-1">
-                  - 긴급한 사항일 경우에만 전화로 연락드립니다.<BR>
-                  - 궁금하신 내용을 정확하고 구체적으로 작성해 주시면 빠르게 답변을 받으실 수 있습니다.<BR>
-                  - 이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
-                    target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/'
-                    target='_blank'>서비스 약관</a>이 적용됩니다.
+                  <ul>
+                    <li>긴급한 사항일 경우에만 전화로 연락드립니다.</li>
+                    <li>궁금하신 내용을 정확하고 구체적으로 작성해 주시면 빠르게 답변을 받으실 수 있습니다.</li>
+                    <li>이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
+                      target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/'
+                      target='_blank'>서비스 약관</a>이 적용됩니다.</li>
+                  </ul>
                 </div>
 
-                <div class="col-12 text-center">
+                <div class="col-12 text-center mt-3">
                   <div class="form-group">
                     <input type="checkbox" name="form_contact_agree_1" id="form_contact_agree_1" value="제공">
                     <label class="lab_check" for="form_contact_agree_1"><span class="checkbox"></span></label>
