--- a/about.html
+++ b/about.html
@@ -455,6 +455,12 @@
                   <p class="mb-6">APLY는 업무 협약 및 제휴를 통해 기술의 전문성을 높이고 활동의 영역을 확장합니다.</p>
                   <div class="owl-carousel" data-items="[4,4,2]" data-aos="zoom-in" data-loop="true" data-autoplay="true">
                     <div class="logo">
+                      <a href="//dhlottery.co.kr/" target="_blank"><img src="assets/img/partners_logo_dhlottery.png" class="bordered border-secondary p-1" alt="동행복권" /></a>
+                    </div>
+                    <div class="logo">
+                      <a href="//www.kbanknow.com" target="_blank"><img src="assets/img/partners_logo_kbank.png" class="bordered border-secondary p-1" alt="케이뱅크" /></a>
+                    </div>
+                    <div class="logo">
                       <a href="//www.msit.go.kr" target="_blank"><img src="assets/img/partners_logo_s&t.png" class="bordered border-secondary p-1" alt="과학기술정보통신부" /></a>
                     </div>
                     <div class="logo">
