--- a/about.html
+++ b/about.html
@@ -230,7 +230,13 @@
                       <div class="accordion-content" data-content>
                         <div class="accordion-content-wrapper">
                           <p>
-                            <span>2월</span><br />                            
+                            <span>7월</span><br />
+                            동행복권과 서비스 공급 계약                            
+                          </p>
+                        </div>
+                        <div class="accordion-content-wrapper">
+                          <p>
+                            <span>2월</span><br />
                             AQR 서비스 누적 사용자 수 40만 명 돌파
                           </p>
                         </div>
