--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>    
       <div class="container py-3 py-sm-5">
         <div class="row">
-          <div class="col-12 text-center fs-14"><span>&copy; <script>document.write((new Date()).getFullYear());</script> APLY Inc. All Rights Reserved.</span></div>
+          <div class="col-12 text-center fs-14"><span>&copy; <script>document.write((new Date()).getFullYear());</script> <img src="assets/images/logo_white.png" style="width:33px;margin-bottom: 2px;"> Inc.</span></div>
         </div>
       </div>
     </footer>
