--- a/about.html
+++ b/about.html
@@ -251,13 +251,13 @@
                   <div class="accordion-content-wrapper">
                     <p>
                       <span>8월</span><br />
-                      케이뱅크와 서비스 공급 계약
+                      케이뱅크와 AQR 서비스 공급 계약
                     </p>
                   </div>
                   <div class="accordion-content-wrapper">
                     <p>
                       <span>7월</span><br />
-                      동행복권과 서비스 공급 계약
+                      동행복권과 AQR 서비스 공급 계약
                     </p>
                   </div>
                   <div class="accordion-content-wrapper">
