--- a/about.html
+++ b/about.html
@@ -242,6 +242,13 @@
                   <h5>2025년</h5>
                 </div>
                 <div class="accordion-content" data-content>
+                  
+                  <div class="accordion-content-wrapper">
+                    <p>
+                      <span>12월</span><br />
+                      정은혜 작가 전시회 '은혜로운 명화'전 대상 배리어 프리 전시 협업
+                    </p>
+                  </div>
                   <div class="accordion-content-wrapper">
                     <p>
                       <span>11월</span><br />
@@ -297,7 +304,7 @@
                     <p>
                       <span>11월</span><br />
                       LIPS 자금 유치,<br />
-                      정은혜 작가 전시회 '해의 시선'배리어 프리 전시 협업
+                      정은혜 작가 전시회 '해의 시선'전 대상 배리어 프리 전시 협업
                     </p>
                   </div>
                 </div>
