--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" id="menu_main" href="#main">
             <img class="navbar-logo navbar-logo-light" src="assets/img/logo_white.png" style="width:75px;" alt="APLY" />
-            <img class="navbar-logo navbar-logo-dark" src="assets/img/logo_blak.png" style="width:75px;" alt="APLY" />
+            <img class="navbar-logo navbar-logo-dark" src="assets/img/logo_black.png" style="width:75px;" alt="APLY" />
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="burger"><span></span></span>
